--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.3",
     "install": "^0.13.0",
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
@@ -37,6 +38,9 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.5",
     "npm": "^8.12.2",
+    "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
+    "path": "^0.12.7",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0",
