--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   "dependencies": {
     "base-64": "^1.0.0",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.8",
     "express": "^4.17.1",
     "install": "^0.13.0",
     "jest": "^26.6.3",
@@ -37,10 +39,12 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.5",
     "npm": "^8.12.2",
+    "path": "^0.12.7",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0",
     "sqlite3": "^5.0.2",
+    "stripe": "^9.14.0",
     "supertest": "^6.1.3",
     "uuid": "^8.3.2"
   }
