--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
+    "morgan-json": "^1.1.0",
     "nodemailer": "^6.7.5",
     "npm": "^8.12.2",
     "passport": "^0.6.0",
@@ -50,6 +51,7 @@
     "sqlite3": "^5.0.2",
     "stripe": "^9.14.0",
     "supertest": "^6.1.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.8.1"
   }
 }
