--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "morgan": "^1.10.0",
     "morgan-json": "^1.1.0",
     "nodemailer": "^6.7.5",
+    "nodemon": "^2.0.19",
     "npm": "^8.12.2",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
