this branch after finishing edit the rest forgot password -- last edit

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,13 @@
   "cSpell.ignoreWords": [
     "deleteprofile",
     "searchbyname"
+  ],
+  "cSpell.words": [
+    "aboutus",
+    "forgetpassword",
+    "lastnews",
+    "sendpasswordlink",
+    "updateinfo",
+    "verifytoken"
   ]
 }
